--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "xplayer",
+  "name": "x-player",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "dist/xplayer.umd.js",
-  "module": "dist/xplayer.es.js",
-  "typings": "dist/types/index.d.ts",
+  "main": "dist/x-player.js",
+  "module": "dist/x-player.es.js",
+  "unpkg": "dist/x-player.umd.js",
+  "typings": "dist/types/x-player.d.ts",
   "files": [
     "dist"
   ],
   "author": "Eleven",
+  "maintainers": [
+    "Eleven"
+  ],
   "homepage": "",
   "repository": {
     "type": "git",
@@ -20,29 +24,35 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "start": "concurrently \"rollup -c rollup.config.ts --environment NODE_ENV:development -w\" \"tsc -p tsconfig.dev.json -w\"",
+    "start": "concurrently \"rollup -c rollup.config.js --environment NODE_ENV:development -w\" \"tsc -p tsconfig.spec.json -w\"",
+    "build": "concurrently \"rollup -c rollup.config.js --environment NODE_ENV:production\" \"tsc\"",
     "test": "jest --coverage --watchAll",
-    "build": "concurrently \"rollup -c rollup.config.ts --environment NODE_ENV:production\" \"tsc\" \"typedoc\"",
-    "commit": "git cz",
-    "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "eslint . --ext .js,.ts --fix"
+    "demo": "cd demo && yarn start",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint \"src/**/*.{js?(x),ts?(x)}\"",
+    "lint:fix": "eslint \"src/**/*.{js?(x),ts?(x)}\" --fix",
+    "commit": "git-cz",
+    "release": "standard-version",
+    "release:patch": "standard-version --releaseAs patch",
+    "release:minor": "standard-version --releaseAs minor",
+    "release:major": "standard-version --releaseAs major"
   },
-  "lint-staged": {
-    "{src,test}/**/*.{js,ts}": [
-      "prettier --write",
-      "npm run lint:fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "exec < /dev/tty && lint-staged",
-      "commit-msg": "exec < /dev/tty && commitlint -E HUSKY_GIT_PARAMS"
-    }
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "commit-msg": "commitlint -E GIT_PARAMS"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{js?(x),ts?(x),json,css,scss,less,html,md}": [
+      "prettier --write"
+    ],
+    "src/**/*.{js?(x),ts?(x)}": [
+      "npm run lint:fix"
+    ]
   },
   "commitlint": {
     "extends": [
@@ -54,57 +64,57 @@
     "last 2 versions",
     "not ie <= 8"
   ],
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.13.10"
+  },
+  "peerDependencies": {},
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime-corejs3": "^7.11.2",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@rbnlffl/rollup-plugin-eslint": "^1.1.2",
+    "@rbnlffl/rollup-plugin-eslint": "^1.1.4",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.2",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-modules-literals": "^0.0.3",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "@umijs/fabric": "^2.5.7",
     "colors": "^1.4.0",
     "commitizen": "^4.2.1",
     "concurrently": "^5.3.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
+    "eslint": "^7.21.0",
+    "inquirer": "^8.0.0",
     "jest": "^26.4.2",
     "jest-config": "^26.4.2",
     "lint-staged": "^10.3.0",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^2.1.2",
-    "prompt": "^1.0.0",
+    "prettier": "^2.2.1",
     "replace-in-file": "^6.1.0",
-    "rollup": "^2.26.9",
-    "rollup-plugin-banner": "^0.2.1",
+    "rollup": "^2.34.2",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-filesize": "^9.0.2",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^6.1.0",
     "shelljs": "^0.8.4",
+    "standard-version": "^9.1.1",
     "ts-jest": "^26.3.0",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.1",
-    "typescript": "^4.0.2"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
+    "yorkie": "^2.0.0"
   },
-  "dependencies": {}
+  "resolutions": {
+    "remark": "11.0.2"
+  }
 }
